--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Shayann landing page.">
     <meta name="author" content="Devcrud">
-    <title>Shayann Gonzalez Landing page</title>
+    <title>Shayann Gonzalez Portfolio</title>
     <!-- font icons -->
     <link rel="stylesheet" href="public_html/assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
