--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Shayann landing page.">
-    <meta name="author" content="Devcrud">
     <title>Shayann Gonzalez Portfolio</title>
     <!-- font icons -->
     <link rel="stylesheet" href="public_html/assets/vendors/themify-icons/css/themify-icons.css">
@@ -76,11 +73,8 @@
                     <li><span>Address</span> :  Le Ry Saint-Jean 73, 1370 Jodoigne</li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://github.com/Shayann37" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/shayann-gonzalez-97088929b/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 </ul>  
             </div>
             <div class="col-lg-4 about-card">
@@ -90,7 +84,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>UX Design</h6>
-                        <p class="subtitle"> exercitat Repellendus,  corrupt.</p>
+                        <p class="subtitle">Customer</p>
                         <hr>
                     </div>
                 </div>
@@ -98,15 +92,15 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-paint-bucket icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Web Development</h6>
-                        <p class="subtitle">Lorem ipsum dolor sit consectetur.</p>
+                        <p class="subtitle">Web pages</p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Digital Marketing</h6>
-                        <p class="subtitle">voluptate commodi illo voluptatib.</p>
+                        <h6>Software Development</h6>
+                        <p class="subtitle">Applications</p>
                         <hr>
                     </div>
                 </div>
@@ -273,41 +267,83 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Hackathon</td>
+                        <td rowspan="7">Formation</td> <!-- Utilisation de rowspan pour fusionner deux lignes -->
+                        <td>LinkedIn Learning</td>
+                        <td>Learning <a href="pages/gitlab.html">GitLab</a></td>
+                        <td>1.03</td>
+                    </tr>
+                    <tr>
+                        <td>LinkedIn Learning</td>
+                        <td>Learning <a href="pages/git.html">Git and GitHub</a></td>
+                        <td>1.52</td>
+                    </tr>
+                    <tr>
+                        <td>LinkedIn Learning</td>
+                        <td>Learning <a href="pages/kubernetes.html" >Kubernetes</a></td>
+                        <td>1.26</td>
+                    </tr>
+                    <tr>
+                        <td>LinkedIn Learning</td>
+                        <td>Learning <a href="pages/docker.html" >Docker</a></td>
+                        <td>1.56</td>
+                    </tr>
+                    <tr>
+                        <td>LinkedIn Learning</td>
+                        <td><a href="pages/kotlin.html" >Kotlin </a>Essential Training: Functions,
+                            Collections, and I/O</td>
+                        <td>4.42</td>
+                    </tr>
+                    <tr>
+                        <td>LinkedIn Learning</td>
+                        <td>Learning <a href="pages/springBoot.html	" >Spring with Spring Boot</a></td>
+                        <td>2.13</td>
+                    </tr>
+                    <tr>
+                        <td>LinkedIn Learning</td>
+                        <td>Build <a href="pages/springBootApp.html" >Spring Boot Apps with the Kotlin</a>
+                            Programming Language</td>
+                        <td>7.46</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">Hackathon</td>
                         <td>Hackaton EPHEC 2022</td>
-                        <td>My first <a href="Pages/Hackaton.html" target="_blank">EPHEC's Hackaton </a> about sustainable development</td>
-                        <td> 10 </td>
+                        <td>My first <a href="pages/hackaton1.html" >EPHEC's Hackaton </a> about sustainable development</td>
+                        <td>10</td>
                     </tr>
                     <tr>
-                        <td>Hackathon</td>
                         <td>Hackaton EPHEC 2023</td>
-                        <td>My second <a href="Pages/Hackaton.html" target="_blank">EPHEC's Hackaton </a> about sustainable development</td>
-                        <td> 10 </td>
+                        <td>My second <a href="pages/hackaton2.html" >EPHEC's Hackaton </a> about sustainable development</td>
+                        <td>10</td>
                     </tr>
                     <tr>
-                        <td>CTF</td>
+                        <td rowspan="2">CTF</td>
                         <td>Cybersecuritychallenge Belgium 2023</td>
-                        <td>My first <a href="Pages/Hackaton.html" target="_blank">cybersecuritychallenge</a></td>
-                        <td> 10 </td>
+                        <td>My first <a href="pages/ctf2.html" >cybersecuritychallenge</a></td>
+                        <td>10</td>
                     </tr>
                     <tr>
-                        <td>CTF</td>
                         <td>Cybersecuritychallenge Belgium 2024</td>
-                        <td>My second <a href="Pages/Hackaton.html" target="_blank">cybersecuritychallenge</a></td>
-                        <td> 10 </td>
+                        <td>My second <a href="pages/ctf1.html">cybersecuritychallenge</a></td>
+                        <td>10</td>
                     </tr>
                     <tr>
                         <td>Softskills</td>
                         <td>Animator</td>
-                        <td>Child animator in the <a href="Pages/Languages.html" target="_blank">scout</a> movement</td>
+                        <td>Child animator in the <a href="pages/scout.html" >scout</a> movement</td>
                         <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>Conference</td>
+                        <td>Cybersécurité: un combat virtuel bien réel ?</td>
+                        <td>Conference on the  <a href="pages/conference.html">cybersecurity</a> of a hospital</td>
+                        <td>1.3</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="3"></td>
-    
-                        <td>XX</td>
+                        <td>TOTAL</td>
+                        <td colspan="2"></td>
+                        <td>70.68</td>
                     </tr>
                 </tfoot>
             </table>
@@ -379,7 +415,7 @@
 
         </div>
     </div>
-<!--   
+
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
@@ -387,7 +423,7 @@
             </p>
         </div>
     </footer>
--->
+
 
 	<!-- core  -->
     <script src="public_html/assets/vendors/jquery/jquery-3.4.1.js"></script>
