--- a/pages/git.html
+++ b/pages/git.html
@@ -13,6 +13,7 @@
 
     <div class="container">
         <h1 class="mb-5" style="margin-top: 20px;"><span class="text-danger">My</span> Portfolio</h1>
+        <button onclick="window.history.back()" class="btn bg-primary w-lg" style="color: white;">Back</button>
         <header class="major">
             <div>
                 <p></p>
@@ -21,15 +22,10 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Git and Github</h2>
         </header>
-        <p class="text-content">My passion for learning new languages is fueled by both practicality and personal experiences. <br>
-            Living in Belgium, improving my Dutch skills is essential for better integration everywhere in my country.<br>
-            Following a memorable Erasmus exchange in Norway, I really want to continue learning Norwegian to be able to go back there and have an easier connection with people. <br>
-            Overall, I believe language learning opens doors to diverse cultures, facilitates connections worldwide, and prommotes personal growth.<br> <br>
-
-            “If you talk to a man in a language he understands, that goes to his head. If you talk to him in his own language, that goes to his heart.” - Nelson Mandela
+        <p class="text-content">This training allowed me to deepen my knowledge in using two essential tools: "Git" and "GitHub". While I already had some experience with "Github", this opportunity provided me with the chance to delve further into the use of "Git" itself, in addition to discovering the specifics of "GitHub". This dual approach has given me a more comprehensive perspective on version control, thereby strengthening my skills and confidence in managing software development projects.
             <div class="proof-container">
-                <h3>Proofs</h3> 
-                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Git_and_GitHub_2021.jpg" alt="Busuu proof" width="700" height="500">
+                <h2>Proofs</h2> 
+                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Git_and_GitHub_2021.jpg" alt="Busuu proof" width="600" height="400">
             
             </div>
             
