--- a/pages/hackaton1.html
+++ b/pages/hackaton1.html
@@ -13,6 +13,7 @@
 
     <div class="container">
         <h1 class="mb-5" style="margin-top: 20px;"><span class="text-danger">My</span> Portfolio</h1>
+        <button onclick="window.history.back()" class="btn bg-primary w-lg" style="color: white;">Back</button>
         <header class="major">
             <div>
                 <p></p>
@@ -24,11 +25,12 @@
         <p class="text-content">In 2022 I took part at my first EPHEC's Hackaton</a></td>  <br>
             A hackathon is a weekend event where teams of 3 to 5 people have to develop a project during the weekend.  <br>
             It was the first time I participated in a hackathon. It was a very enriching experience. I was able to learn how to work with a team and manage our time.  <br>
-            The theme was about sustainable development.  
-            We developed a platform to exchange re-usable things such as hardware/books/etc between EPHEC students, and we won the third place! <br>
+            The theme was about sustainable development.  <br>
+            
+We developed an application aimed at facilitating the buying and selling of products using geolocation services. With our platform, users can easily browse, buy, and sell a variety of items within their local area. I'm proud to share that our application garnered significant recognition, earning us the first place in the competition! <br>
 
             <div class="video-container">
-                <h3>Proof</h3>
+                <h2>Proof</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/X24J60kMmWw" allowfullscreen></iframe>
             </div>
         </p>
