--- a/pages/kubernetes.html
+++ b/pages/kubernetes.html
@@ -13,6 +13,7 @@
 
     <div class="container">
         <h1 class="mb-5" style="margin-top: 20px;"><span class="text-danger">My</span> Portfolio</h1>
+        <button onclick="window.history.back()" class="btn bg-primary w-lg" style="color: white;">Back</button>
         <header class="major">
             <div>
                 <p></p>
@@ -21,15 +22,11 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Kubernetes</h2>
         </header>
-        <p class="text-content">My passion for learning new languages is fueled by both practicality and personal experiences. <br>
-            Living in Belgium, improving my Dutch skills is essential for better integration everywhere in my country.<br>
-            Following a memorable Erasmus exchange in Norway, I really want to continue learning Norwegian to be able to go back there and have an easier connection with people. <br>
-            Overall, I believe language learning opens doors to diverse cultures, facilitates connections worldwide, and prommotes personal growth.<br> <br>
-
-            “If you talk to a man in a language he understands, that goes to his head. If you talk to him in his own language, that goes to his heart.” - Nelson Mandela
+        <p class="text-content">
+            This Kubernetes training has been particularly valuable for me during my internship, as it aligned closely with the technology stack we utilized. While I had encountered Kubernetes briefly during my academic studies, this training provided a more in-depth understanding of its intricacies and practical applications. It enabled me to grasp complex concepts more thoroughly, which proved instrumental in navigating and contributing to projects during my internship. This firsthand experience with Kubernetes not only enhanced my technical skills but also provided me with a deeper insight into its role in modern software development practices.
             <div class="proof-container">
-                <h3>Proofs</h3> 
-                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Kubernetes.jpg" alt="Busuu proof" width="700" height="500">
+                <h2>Proofs</h2> 
+                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Kubernetes.jpg" alt="Busuu proof" width="600" height="400">
             
             </div>
             
