--- a/pages/springBoot.html
+++ b/pages/springBoot.html
@@ -13,6 +13,7 @@
 
     <div class="container">
         <h1 class="mb-5" style="margin-top: 20px;"><span class="text-danger">My</span> Portfolio</h1>
+        <button onclick="window.history.back()" class="btn bg-primary w-lg" style="color: white;">Back</button>
         <header class="major">
             <div>
                 <p></p>
@@ -21,15 +22,10 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Spring Boot</h2>
         </header>
-        <p class="text-content">My passion for learning new languages is fueled by both practicality and personal experiences. <br>
-            Living in Belgium, improving my Dutch skills is essential for better integration everywhere in my country.<br>
-            Following a memorable Erasmus exchange in Norway, I really want to continue learning Norwegian to be able to go back there and have an easier connection with people. <br>
-            Overall, I believe language learning opens doors to diverse cultures, facilitates connections worldwide, and prommotes personal growth.<br> <br>
-
-            “If you talk to a man in a language he understands, that goes to his head. If you talk to him in his own language, that goes to his heart.” - Nelson Mandela
+        <p class="text-content">Learning the Spring framework has been a significant milestone in my journey as a developer, especially considering my prior lack of familiarity with it. Through dedicated training and hands-on practice, I gained a comprehensive understanding of the Spring ecosystem, including its core principles, modules, and best practices. This newfound knowledge was instrumental during my internship, where Spring played a pivotal role in developing the backend infrastructure of our application. Despite being a newcomer to Spring, the training equipped me with the necessary skills to navigate its intricacies and leverage its powerful features effectively. With Spring, I was able to design and implement robust, scalable, and maintainable backend solutions that met the project's requirements and exceeded expectations.
             <div class="proof-container">
-                <h3>Proofs</h3> 
-                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Spring_with_Spring_Boot.jpg" alt="Busuu proof" width="700" height="500">
+                <h2>Proofs</h2> 
+                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Spring_with_Spring_Boot.jpg" alt="Busuu proof" width="600" height="400">
             
             </div>
             
