--- a/pages/springBootApp.html
+++ b/pages/springBootApp.html
@@ -13,6 +13,7 @@
 
     <div class="container">
         <h1 class="mb-5" style="margin-top: 20px;"><span class="text-danger">My</span> Portfolio</h1>
+        <button onclick="window.history.back()" class="btn bg-primary w-lg" style="color: white;">Back</button>
         <header class="major">
             <div>
                 <p></p>
@@ -21,15 +22,14 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Build </span> a Spring Boot App</h2>
         </header>
-        <p class="text-content">My passion for learning new languages is fueled by both practicality and personal experiences. <br>
-            Living in Belgium, improving my Dutch skills is essential for better integration everywhere in my country.<br>
-            Following a memorable Erasmus exchange in Norway, I really want to continue learning Norwegian to be able to go back there and have an easier connection with people. <br>
-            Overall, I believe language learning opens doors to diverse cultures, facilitates connections worldwide, and prommotes personal growth.<br> <br>
-
-            “If you talk to a man in a language he understands, that goes to his head. If you talk to him in his own language, that goes to his heart.” - Nelson Mandela
+        <p class="text-content">
+            Participating in a training program focused on developing applications with Spring Boot and Kotlin has been a transformative experience for me. Prior to this training, I had limited exposure to both Spring Boot and Kotlin individually. However, through immersive learning and hands-on projects, I gained a deep understanding of how to leverage these technologies together to build modern, robust applications. <br><br>
+            During the training, I learned how to harness the power of Spring Boot to rapidly develop backend services and APIs. Its convention-over-configuration approach and seamless integration with Kotlin allowed me to streamline the development process and focus more on implementing business logic.<br><br>
+            Additionally, learning Kotlin as the primary language for backend development opened up a whole new world of possibilities. Its concise syntax, null safety, and functional programming capabilities enabled me to write clean, expressive code with fewer bugs and greater productivity. <br><br>
+            Combining Spring Boot with Kotlin, I was able to architect and develop an innovative application that met the project requirements and surpassed expectations. This training not only expanded my technical skill set but also instilled in me a newfound confidence in tackling complex software development challenges.
             <div class="proof-container">
-                <h3>Proofs</h3> 
-                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Build_Spring_Boot_Apps_with_the_Kotlin_Programming_Language.jpg" alt="Busuu proof" width="700" height="500">
+                <h2>Proofs</h2> 
+                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Build_Spring_Boot_Apps_with_the_Kotlin_Programming_Language.jpg" alt="Busuu proof" width="600" height="400">
             
             </div>
             
