--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="public_html/assets/css/johndoe.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-    <a href="public_html/components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a>
     <header class="header">
         <div class="container">
             <div class="header-content">
@@ -67,10 +66,10 @@
                 <h3 class="font-weight-light">Personal Info</h3>
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
-                    <li><span>Birthdate</span> : 20/07/2000</li>
-                    <li><span>Email</span> : shayanngonzalez@gmail.com</li>
-                    <li><span>Phone</span> : +32471544505</li>
-                    <li><span>Address</span> :  Le Ry Saint-Jean 73, 1370 Jodoigne</li>
+                    <li><i class="ti-gift icon-md"></i><span>    Birthdate</span> : 20/07/2000</li>
+                    <li><i class="ti-envelope icon-md"></i><span>    Email</span> : <a href="mailto:shayanngonzalez@gmail.com" style="color:#F85C70 ;">shayanngonzalez@gmail.com</a></li>
+                    <li><i class="ti-mobile icon-md"></i><span >    Phone</span> : +32471544505</li>
+                    <li><i class="ti-map-alt icon-md"></i><span>    Address</span> :  Le Ry Saint-Jean 73, 1370 Jodoigne</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://github.com/Shayann37" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
@@ -248,7 +247,8 @@
     <section class="section bg-dark py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I Am Available Directly</h2>
-            <button onclick="window.location.href = '#contact'" class="btn bg-primary w-lg">Hire me</button>
+            <h3 class="text-light mb-5 font-weight-normal">Don't hesitate and send me an email !</h3>
+            <button onclick="window.location.href = '#contact'" class="btn bg-primary w-lg"><a href="mailto:shayanngonzalez@gmail.com" style="color: black;">shayanngonzalez@gmail.com</a></button>
         </div>
     </section>
 
@@ -270,80 +270,80 @@
                         <td rowspan="7">Formation</td> <!-- Utilisation de rowspan pour fusionner deux lignes -->
                         <td>LinkedIn Learning</td>
                         <td>Learning <a href="pages/gitlab.html">GitLab</a></td>
-                        <td>1.03</td>
+                        <td>1h03</td>
                     </tr>
                     <tr>
                         <td>LinkedIn Learning</td>
                         <td>Learning <a href="pages/git.html">Git and GitHub</a></td>
-                        <td>1.52</td>
+                        <td>1h52</td>
                     </tr>
                     <tr>
                         <td>LinkedIn Learning</td>
                         <td>Learning <a href="pages/kubernetes.html" >Kubernetes</a></td>
-                        <td>1.26</td>
+                        <td>1h26</td>
                     </tr>
                     <tr>
                         <td>LinkedIn Learning</td>
                         <td>Learning <a href="pages/docker.html" >Docker</a></td>
-                        <td>1.56</td>
+                        <td>1h56</td>
                     </tr>
                     <tr>
                         <td>LinkedIn Learning</td>
                         <td><a href="pages/kotlin.html" >Kotlin </a>Essential Training: Functions,
                             Collections, and I/O</td>
-                        <td>4.42</td>
+                        <td>4h42</td>
                     </tr>
                     <tr>
                         <td>LinkedIn Learning</td>
                         <td>Learning <a href="pages/springBoot.html	" >Spring with Spring Boot</a></td>
-                        <td>2.13</td>
+                        <td>2h13</td>
                     </tr>
                     <tr>
                         <td>LinkedIn Learning</td>
                         <td>Build <a href="pages/springBootApp.html" >Spring Boot Apps with the Kotlin</a>
                             Programming Language</td>
-                        <td>7.46</td>
+                        <td>7h46</td>
                     </tr>
                     <tr>
                         <td rowspan="2">Hackathon</td>
                         <td>Hackaton EPHEC 2022</td>
                         <td>My first <a href="pages/hackaton1.html" >EPHEC's Hackaton </a> about sustainable development</td>
-                        <td>10</td>
+                        <td>10h</td>
                     </tr>
                     <tr>
                         <td>Hackaton EPHEC 2023</td>
                         <td>My second <a href="pages/hackaton2.html" >EPHEC's Hackaton </a> about sustainable development</td>
-                        <td>10</td>
+                        <td>10h</td>
                     </tr>
                     <tr>
                         <td rowspan="2">CTF</td>
                         <td>Cybersecuritychallenge Belgium 2023</td>
-                        <td>My first <a href="pages/ctf2.html" >cybersecuritychallenge</a></td>
-                        <td>10</td>
+                        <td>My first <a href="pages/ctf1.html" >cybersecuritychallenge</a></td>
+                        <td>10h</td>
                     </tr>
                     <tr>
                         <td>Cybersecuritychallenge Belgium 2024</td>
-                        <td>My second <a href="pages/ctf1.html">cybersecuritychallenge</a></td>
-                        <td>10</td>
+                        <td>My second <a href="pages/ctf2.html">cybersecuritychallenge</a></td>
+                        <td>10h</td>
                     </tr>
                     <tr>
                         <td>Softskills</td>
                         <td>Animator</td>
                         <td>Child animator in the <a href="pages/scout.html" >scout</a> movement</td>
-                        <td>10</td>
+                        <td>10h</td>
                     </tr>
                     <tr>
                         <td>Conference</td>
                         <td>Cybersécurité: un combat virtuel bien réel ?</td>
                         <td>Conference on the  <a href="pages/conference.html">cybersecurity</a> of a hospital</td>
-                        <td>1.3</td>
+                        <td>1h30</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <td>TOTAL</td>
                         <td colspan="2"></td>
-                        <td>70.68</td>
+                        <td>72h28</td>
                     </tr>
                 </tfoot>
             </table>
@@ -352,74 +352,11 @@
     <!-- End of portfolio section -->
 
 
-    <div class="section contact" id="contact">
-        <div id="map" class="map"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="contact-form-card">
-                        <h4 class="contact-title">Send a message</h4>
-                        <form action="">
-                            <div class="form-group">
-                                <input  class="form-control" type="text" placeholder="Name *" required>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" type="email" placeholder="Email *" required>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" id=" placeholder="Message *" rows="7" required></textarea>
-                            </div>
-                            <div class="form-group ">
-                                <button type="submit" class="form-control btn btn-primary" >Send Message</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="contact-info-card">
-                        <h4 class="contact-title">Get in touch</h4>
-                        <div class="row mb-2">
-                            <div class="col-1 pt-1 mr-1">
-                                <i class="ti-mobile icon-md"></i>
-                            </div>
-                            <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+32471544505</span></h6>
-                            </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-1 pt-1 mr-1">
-                                <i class="ti-map-alt icon-md"></i>
-                            </div>
-                            <div class="col-10">
-                                <h6 class="d-inline">Address :<br> <span class="text-muted">Le Ry Saint-Jean 73, 1370 Jodoigne Belgium.</span></h6>
-                            </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-1 pt-1 mr-1">
-                                <i class="ti-envelope icon-md"></i>
-                            </div>
-                            <div class="col-10">
-                                <h6 class="d-inline">Email :<br> <span class="text-muted">shayanngonzalez@gmail.com</span></h6>
-                            </div>
-                        </div>
-                        <ul class="social-icons pt-4">
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
-                        </ul> 
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
 
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
-                &copy; <script>document.write(new Date().getFullYear())</script> Created With <i class="ti-heart text-danger"></i> By <a href="http://devcrud.com" target="_blank"><span class="text-danger" title="Bootstrap 4 Themes and Dashboards">DevCRUD</span></a> 
+                &copy; <script>document.write(new Date().getFullYear())</script> Created With <i class="ti-heart text-danger"></i> By <a><span class="text-danger" title="Bootstrap 4 Themes and Dashboards">Me</span></a> 
             </p>
         </div>
     </footer>
