--- a/pages/docker.html
+++ b/pages/docker.html
@@ -13,6 +13,7 @@
 
     <div class="container">
         <h1 class="mb-5" style="margin-top: 20px;"><span class="text-danger">My</span> Portfolio</h1>
+        <button onclick="window.history.back()" class="btn bg-primary w-lg" style="color: white;">Back</button>
         <header class="major">
             <div>
                 <p></p>
@@ -21,15 +22,11 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Docker</h2>
         </header>
-        <p class="text-content">My passion for learning new languages is fueled by both practicality and personal experiences. <br>
-            Living in Belgium, improving my Dutch skills is essential for better integration everywhere in my country.<br>
-            Following a memorable Erasmus exchange in Norway, I really want to continue learning Norwegian to be able to go back there and have an easier connection with people. <br>
-            Overall, I believe language learning opens doors to diverse cultures, facilitates connections worldwide, and prommotes personal growth.<br> <br>
-
-            “If you talk to a man in a language he understands, that goes to his head. If you talk to him in his own language, that goes to his heart.” - Nelson Mandela
+        <p class="text-content">
+            This Docker training has significantly broadened my knowledge and understanding of containerization technology. Although I had some exposure to Docker previously, this dedicated training session provided me with a comprehensive understanding of its principles, functionalities, and real-world applications. Throughout the training, I gained hands-on experience with Docker, learning how to create, deploy, and manage containers effectively. This practical experience proved invaluable during my internship, where Docker was a key component of our development environment. It allowed me to better comprehend the intricacies of containerization and leverage Docker to streamline the development and deployment processes of our projects.
             <div class="proof-container">
-                <h3>Proofs</h3> 
-                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Docker.jpg" alt="Busuu proof" width="700" height="500">
+                <h2>Proofs</h2> 
+                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Docker.jpg" alt="Busuu proof" width="600" height="400">
             
             </div>
             
