--- a/pages/kotlin.html
+++ b/pages/kotlin.html
@@ -13,6 +13,7 @@
 
     <div class="container">
         <h1 class="mb-5" style="margin-top: 20px;"><span class="text-danger">My</span> Portfolio</h1>
+        <button onclick="window.history.back()" class="btn bg-primary w-lg" style="color: white;">Back</button>
         <header class="major">
             <div>
                 <p></p>
@@ -21,15 +22,10 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Kotlin</h2>
         </header>
-        <p class="text-content">My passion for learning new languages is fueled by both practicality and personal experiences. <br>
-            Living in Belgium, improving my Dutch skills is essential for better integration everywhere in my country.<br>
-            Following a memorable Erasmus exchange in Norway, I really want to continue learning Norwegian to be able to go back there and have an easier connection with people. <br>
-            Overall, I believe language learning opens doors to diverse cultures, facilitates connections worldwide, and prommotes personal growth.<br> <br>
-
-            “If you talk to a man in a language he understands, that goes to his head. If you talk to him in his own language, that goes to his heart.” - Nelson Mandela
+        <p class="text-content">This Kotlin training has been incredibly transformative for me, especially considering my prior lack of experience with the language. Throughout the training, I was able to build a solid foundation in Kotlin from the ground up. I learned its fundamental syntax, core features, and best practices for effective development. This knowledge was particularly valuable during my internship, where Kotlin was the primary language used for backend development. Despite being new to Kotlin, the training equipped me with the skills and confidence to quickly adapt and contribute effectively to the backend of our application. Leveraging the concepts and techniques learned during the training, I was able to overcome challenges and deliver high-quality solutions that met the project's requirements.
             <div class="proof-container">
-                <h3>Proofs</h3> 
-                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Kotlin_Essential_Training_Functions_Collections_and_IO.jpg" alt="Busuu proof" width="700" height="500">
+                <h2>Proofs</h2> 
+                <img src="../public_html/assets/imgs/CertificatDaccomplissement_Kotlin_Essential_Training_Functions_Collections_and_IO.jpg" alt="Busuu proof" width="600" height="400">
             
             </div>
             
