--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
                     <li><i class="ti-gift icon-md"></i><span>    Birthdate</span> : 20/07/2000</li>
-                    <li><i class="ti-envelope icon-md"></i><span>    Email</span> : <a href="mailto:shayanngonzalez@gmail.com" style="color:#F85C70 ;">shayanngonzalez@gmail.com</a></li>
+                    <li><i class="ti-email icon-md"></i><span>    Email</span> : <a href="mailto:shayanngonzalez@gmail.com" style="color:#F85C70 ;">shayanngonzalez@gmail.com</a></li>
                     <li><i class="ti-mobile icon-md"></i><span >    Phone</span> : +32471544505</li>
                     <li><i class="ti-map-alt icon-md"></i><span>    Address</span> :  Le Ry Saint-Jean 73, 1370 Jodoigne</li>
                 </ul>
@@ -80,26 +80,26 @@
                 <h3 class="font-weight-light">My Expertise</h3>
                 <span class="line mb-5"></span>
                 <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
+                    <div class="col-1 text-danger pt-1"><i class="ti-desktop icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>UX Design</h6>
-                        <p class="subtitle">Customer</p>
+                        <h6>Internship</h6>
+                        <p class="subtitle">IBA - Ion Beam Applications</p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="ti-paint-bucket icon-lg"></i></div>
+                    <div class="col-1 text-danger pt-1"><i class="ti-shopping-cart-full icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Web Development</h6>
-                        <p class="subtitle">Web pages</p>
+                        <h6>Student Job</h6>
+                        <p class="subtitle">Carrefour and Intermarcher supermarkets</p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
+                    <div class="col-1 text-danger pt-1"><i class="ti-user icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Software Development</h6>
-                        <p class="subtitle">Applications</p>
+                        <h6>Youth Movement</h6>
+                        <p class="subtitle">Scout Leader</p>
                         <hr>
                     </div>
                 </div>
