--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Shayann Gonzalez</h1>
-                <h6 class="header-mono" >Third year IT student</h6>
+                <h6 class="header-mono"></h6>
             </div>
         </div>
     </header>
