--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Third year IT student Located In Our Lovely Earth</h5>
-                <p class="mt-20">Student motivated by a desire to learn. Dynamic and sociable, I have no problem working in a group. I'm also a self-starter and will do my best to complete any tasks assigned to me.</p>
-                <button onclick="window.open('public_html/assets/imgs/CvGonzalezShayann.pdf', '_blank')" class="btn btn-outline-danger"><i class="icon-down-circled2"></i>Download my resume</button>
+                <p class="mt-20">Hi! I'm Shayann Gonzalez, and I'm 23 years old. Currently, I'm in my third year of computer science, and I have a burning desire to specialize in software development. <br><br>
+
+                    I'm dynamic and sociable, which makes me a valuable asset in group work. I enjoy collaborating with my peers, exchanging ideas, and solving problems together. At the same time, I'm capable of working independently, and I'm determined to successfully complete all tasks assigned to me. <br><br>
+                    
+                    My goal is to develop my technical skills and apply them in real-world projects. I'm confident that my commitment and determination will enable me to achieve my professional goals and make a meaningful contribution to the field of software development.</p>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
@@ -68,6 +71,7 @@
                     <li><i class="ti-mobile icon-md"></i><span >    Phone</span> : +32471544505</li>
                     <li><i class="ti-map-alt icon-md"></i><span>    Address</span> :  Le Ry Saint-Jean 73, 1370 Jodoigne</li>
                 </ul>
+                <button onclick="window.open('public_html/assets/imgs/CvGonzalezShayann.pdf', '_blank')" class="btn btn-outline-danger"><i class="icon-down-circled2"></i>Download my resume</button>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://github.com/Shayann37" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/shayann-gonzalez-97088929b/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
@@ -335,12 +339,18 @@
                         <td>Conference on the  <a href="pages/conference.html">cybersecurity</a> of a hospital</td>
                         <td>1h30</td>
                     </tr>
+                    <tr>
+                        <td>Personal Project</td>
+                        <td>Maintenance of a website</td>
+                        <td>Maintenance and refactor of our scout  <a href="pages/tmaTroop.html">web page</a></td>
+                        <td>10h</td>
+                    </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <td>TOTAL</td>
                         <td colspan="2"></td>
-                        <td>72h28</td>
+                        <th>82h28 <span> [Valorisable: 72h28]</span></hd>
                     </tr>
                 </tfoot>
             </table>
