--- a/pages/docker.html
+++ b/pages/docker.html
@@ -23,7 +23,8 @@
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Docker</h2>
         </header>
         <p class="text-content">
-            This Docker training has significantly broadened my knowledge and understanding of containerization technology. Although I had some exposure to Docker previously, this dedicated training session provided me with a comprehensive understanding of its principles, functionalities, and real-world applications. Throughout the training, I gained hands-on experience with Docker, learning how to create, deploy, and manage containers effectively. This practical experience proved invaluable during my internship, where Docker was a key component of our development environment. It allowed me to better comprehend the intricacies of containerization and leverage Docker to streamline the development and deployment processes of our projects.
+            This Docker training has significantly broadened my knowledge and understanding of containerization technology. Although I had some exposure to Docker previously, this dedicated training session provided me with a comprehensive understanding of its principles, functionalities, and real-world applications. <br><br>
+            Throughout the training, I gained hands-on experience with Docker, learning how to create, deploy, and manage containers effectively. This practical experience proved invaluable during my internship, where Docker was a key component of our development environment. It allowed me to better comprehend the intricacies of containerization and leverage Docker to streamline the development and deployment processes of our projects.
             <div class="proof-container">
                 <h2>Proofs</h2> 
                 <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Docker.jpg" alt="Busuu proof" width="600" height="400">
