--- a/pages/git.html
+++ b/pages/git.html
@@ -22,7 +22,8 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Git and Github</h2>
         </header>
-        <p class="text-content">This training allowed me to deepen my knowledge in using two essential tools: "Git" and "GitHub". While I already had some experience with "Github", this opportunity provided me with the chance to delve further into the use of "Git" itself, in addition to discovering the specifics of "GitHub". This dual approach has given me a more comprehensive perspective on version control, thereby strengthening my skills and confidence in managing software development projects.
+        <p class="text-content">This training allowed me to deepen my knowledge in using two essential tools: "Git" and "GitHub". <br><br>
+             While I already had some experience with "Github", this opportunity provided me with the chance to delve further into the use of "Git" itself, in addition to discovering the specifics of "GitHub". This dual approach has given me a more comprehensive perspective on version control, thereby strengthening my skills and confidence in managing software development projects.
             <div class="proof-container">
                 <h2>Proofs</h2> 
                 <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Git_and_GitHub_2021.jpg" alt="Busuu proof" width="600" height="400">
