--- a/pages/kotlin.html
+++ b/pages/kotlin.html
@@ -22,7 +22,9 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Kotlin</h2>
         </header>
-        <p class="text-content">This Kotlin training has been incredibly transformative for me, especially considering my prior lack of experience with the language. Throughout the training, I was able to build a solid foundation in Kotlin from the ground up. I learned its fundamental syntax, core features, and best practices for effective development. This knowledge was particularly valuable during my internship, where Kotlin was the primary language used for backend development. Despite being new to Kotlin, the training equipped me with the skills and confidence to quickly adapt and contribute effectively to the backend of our application. Leveraging the concepts and techniques learned during the training, I was able to overcome challenges and deliver high-quality solutions that met the project's requirements.
+        <p class="text-content">This Kotlin training has been incredibly transformative for me, especially considering my prior lack of experience with the language. <br><br>
+            Throughout the training, I was able to build a solid foundation in Kotlin from the ground up. I learned its fundamental syntax, core features, and best practices for effective development. This knowledge was particularly valuable during my internship, where Kotlin was the primary language used for backend development. <br><br>
+            Despite being new to Kotlin, the training equipped me with the skills and confidence to quickly adapt and contribute effectively to the backend of our application. Leveraging the concepts and techniques learned during the training, I was able to overcome challenges and deliver high-quality solutions that met the project's requirements.
             <div class="proof-container">
                 <h2>Proofs</h2> 
                 <img src="../public_html/assets/imgs/CertificatDaccomplissement_Kotlin_Essential_Training_Functions_Collections_and_IO.jpg" alt="Busuu proof" width="600" height="400">
