--- a/pages/kubernetes.html
+++ b/pages/kubernetes.html
@@ -23,7 +23,9 @@
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Kubernetes</h2>
         </header>
         <p class="text-content">
-            This Kubernetes training has been particularly valuable for me during my internship, as it aligned closely with the technology stack we utilized. While I had encountered Kubernetes briefly during my academic studies, this training provided a more in-depth understanding of its intricacies and practical applications. It enabled me to grasp complex concepts more thoroughly, which proved instrumental in navigating and contributing to projects during my internship. This firsthand experience with Kubernetes not only enhanced my technical skills but also provided me with a deeper insight into its role in modern software development practices.
+            This Kubernetes training has been particularly valuable for me during my internship, as it aligned closely with the technology stack we utilized.<br><br>
+             While I had encountered Kubernetes briefly during my academic studies, this training provided a more in-depth understanding of its intricacies and practical applications. It enabled me to grasp complex concepts more thoroughly, which proved instrumental in navigating and contributing to projects during my internship. <br><br>
+             This firsthand experience with Kubernetes not only enhanced my technical skills but also provided me with a deeper insight into its role in modern software development practices.
             <div class="proof-container">
                 <h2>Proofs</h2> 
                 <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Kubernetes.jpg" alt="Busuu proof" width="600" height="400">
