--- a/pages/conference.html
+++ b/pages/conference.html
@@ -24,10 +24,10 @@
         </header>
         <p class="text-content">Earlier this year, I took part in a conference on cyber security given by Forum financier Brabant wallon
 
-            The conference had two main speakers. <br>
+            The conference had two main speakers. <br><br>
             The first was <span style="font-weight: bold;">Vincent Ceriani</span>, Head of CyberRisk Services at NRB, and the second was <span style="font-weight: bold;">Benoît Debande</span>, CEO of CHIREC, a group of 3 hospital sites.
             
-            As I'm already interested in cyber security, I wanted to attend this conference. <br>
+            As I'm already interested in cyber security, I wanted to attend this conference. <br><br>
              By the end of it, my desire to enter the cybersecurity sector to really understand what is going on behind it had only increased.
             <div class="proof-container">
                 <h2>Proofs</h2> 
