--- a/pages/hackaton1.html
+++ b/pages/hackaton1.html
@@ -22,15 +22,16 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Hackaton</span> 2022</h2>
         </header>
-        <p class="text-content">In 2022 I took part at my first EPHEC's Hackaton</a></td>  <br>
-            A hackathon is a weekend event where teams of 3 to 5 people have to develop a project during the weekend.  <br>
-            It was the first time I participated in a hackathon. It was a very enriching experience. I was able to learn how to work with a team and manage our time.  <br>
-            The theme was about sustainable development.  <br>
+        <p class="text-content">In 2022 I took part at my first EPHEC's Hackaton</a></td>  <br><br>
+            A hackathon is a weekend event where teams of 3 to 5 people have to develop a project during the weekend.  
+            It was the first time I participated in a hackathon. It was a very enriching experience. I was able to learn how to work with a team and manage our time.  <br><br>
+            The theme was about sustainable development.  <br><br>
             
 We developed an application aimed at facilitating the buying and selling of products using geolocation services. With our platform, users can easily browse, buy, and sell a variety of items within their local area. I'm proud to share that our application garnered significant recognition, earning us the first place in the competition! <br>
 
             <div class="video-container">
                 <h2>Proof</h2>
+                <h6>Find me in the vidéo !</h6>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/X24J60kMmWw" allowfullscreen></iframe>
             </div>
         </p>
