--- a/pages/hackaton2.html
+++ b/pages/hackaton2.html
@@ -22,15 +22,16 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Hackaton</span> 2023</h2>
         </header>
-        <p class="text-content">In 2023 I took part at my second EPHEC's Hackaton</a></td>  <br>
-            A hackathon is a weekend event where teams of 3 to 5 people have to develop a project during the weekend.  <br>
-            It was the second time I participated in a hackathon. It was a very enriching experience. I was able to improve my capacity to work with a team and manage our time.  <br>
-            The theme was about sustainable development.  <br>
+        <p class="text-content">In 2023 I took part at my second EPHEC's Hackaton</a></td>  <br><br>
+            A hackathon is a weekend event where teams of 3 to 5 people have to develop a project during the weekend.  
+            It was the second time I participated in a hackathon. It was a very enriching experience. I was able to improve my capacity to work with a team and manage our time.  <br><br>
+            The theme was about sustainable development. <br><br>
             
             We developed a Chrome extension aimed at identifying nearby stores selling the item we wish to purchase during online shopping sessions. The goal of our project is to minimize the ecological footprint of parcel deliveries. Our innovative solution earned us the first place in the "implementation" category ! <br>
 
             <div class="video-container">
                 <h2>Proof</h2>
+                <h6>Find me in the vidéo !</h6>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wt1DOfN-NLs" allowfullscreen></iframe>
             </div>
         </p>
