--- a/pages/springBoot.html
+++ b/pages/springBoot.html
@@ -22,7 +22,9 @@
             </div>
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Learning</span> Spring Boot</h2>
         </header>
-        <p class="text-content">Learning the Spring framework has been a significant milestone in my journey as a developer, especially considering my prior lack of familiarity with it. Through dedicated training and hands-on practice, I gained a comprehensive understanding of the Spring ecosystem, including its core principles, modules, and best practices. This newfound knowledge was instrumental during my internship, where Spring played a pivotal role in developing the backend infrastructure of our application. Despite being a newcomer to Spring, the training equipped me with the necessary skills to navigate its intricacies and leverage its powerful features effectively. With Spring, I was able to design and implement robust, scalable, and maintainable backend solutions that met the project's requirements and exceeded expectations.
+        <p class="text-content">Learning the Spring framework has been a significant milestone in my journey as a developer, especially considering my prior lack of familiarity with it. <br><br>
+            Through dedicated training and hands-on practice, I gained a comprehensive understanding of the Spring ecosystem, including its core principles, modules, and best practices. This newfound knowledge was instrumental during my internship, where Spring played a pivotal role in developing the backend infrastructure of our application. <br><br>
+            Despite being a newcomer to Spring, the training equipped me with the necessary skills to navigate its intricacies and leverage its powerful features effectively. With Spring, I was able to design and implement robust, scalable, and maintainable backend solutions that met the project's requirements and exceeded expectations.
             <div class="proof-container">
                 <h2>Proofs</h2> 
                 <img src="../public_html/assets/imgs/CertificatDaccomplissement_Learning_Spring_with_Spring_Boot.jpg" alt="Busuu proof" width="600" height="400">
