--- a/pages/hackaton1.html
+++ b/pages/hackaton1.html
@@ -31,7 +31,7 @@ We developed an application aimed at facilitating the buying and selling of prod
 
             <div class="video-container">
                 <h2>Proof</h2>
-                <h6>Find me in the vidéo !</h6>
+                <h6>Find me in the video !</h6>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/X24J60kMmWw" allowfullscreen></iframe>
             </div>
         </p>
