--- a/pages/hackaton2.html
+++ b/pages/hackaton2.html
@@ -31,7 +31,7 @@
 
             <div class="video-container">
                 <h2>Proof</h2>
-                <h6>Find me in the vidéo !</h6>
+                <h6>Find me in the video !</h6>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wt1DOfN-NLs" allowfullscreen></iframe>
             </div>
         </p>
